--- a/WebContent/new.html
+++ b/WebContent/new.html
@@ -19,7 +19,7 @@
 <link type="text/css" rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <script type="text/javascript">
-var init={'questions':[{'question':'jQuery是什么？','answers':['JavaScript库','CSS库','PHP框架','以上都不是'],'correctAnswer':1},{'question':'找出不同类的一项?','answers':['写字台','沙发','电视','桌布'],'correctAnswer':3},{'question':'国土面积最大的国家是：','answers':['美国','中国','俄罗斯','加拿大'],'correctAnswer':3},{'question':'月亮距离地球多远？','answers':['18万公里','38万公里','100万公里','180万公里'],'correctAnswer':2}]};
+var init={'questions':[{'question':'1、焦虑心境：担心、担忧，感到有最坏的事情将要发生，容易激惹','answers':['无症状','轻','中等','极重'],'correctAnswer':1},{'question':'2、紧张：紧张感，易疲劳，不能放松，情绪反应，易哭、颤抖、感到不安','answers':['无症状','轻','中等','极重'],'correctAnswer':3},{'question':'3、害怕：害怕黑暗，陌生人，一人独处，动物，乘车或旅行及人多的场合','answers':['无症状','轻','中等','极重'],'correctAnswer':3},{'question':'4、认知功能：或称记忆、注意障碍。注意力不能集中，记忆力差,'answers':['无症状','轻','中等','极重'],'correctAnswer':2}]};
 
 $(function(){
 	$('#quiz-container').jquizzy({
