--- a/WebContent/charts.html
+++ b/WebContent/charts.html
@@ -1,22 +1,23 @@
-<!doctype html>
+ï»¿<!doctype html>
 <html lang="en">
 <head>
+<meta charset="UTF-8">
   <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
   <script type="text/javascript" src="js/highcharts.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
-  <title>Á¿±íµÃ·ÖÕÛÏßÍ¼</title>
+  <title>é‡è¡¨å¾—åˆ†æŠ˜çº¿å›¾</title>
   <script>
   
     Highcharts.setOptions({
 		lang: {
-	        contextButtonTitle: '´òÓ¡»òÕßÊä³öÊ±µÄ²Ëµ¥À¸±êÌâ'//Ä¬ÈÏÊÇ£º Chart context menu.
+	        contextButtonTitle: 'æ‰“å°æˆ–è€…è¾“å‡ºæ—¶çš„èœå•æ æ ‡é¢˜'//é»˜è®¤æ˜¯ï¼š Chart context menu.
 		}
 	});
   
   $(function () {
 	    $('#container').highcharts({
 	        title: {
-	            text: 'Á¿±íµÃ·ÖÕÛÏßÍ¼(ºáÆÁĞ§¹û×î¼Ñ)',
+	            text: 'é‡è¡¨å¾—åˆ†æŠ˜çº¿å›¾(æ¨ªå±æ•ˆæœæœ€ä½³)',
 	            x: -20 //center
 	        },
 	        subtitle: {
@@ -28,7 +29,7 @@
 	        },
 	        yAxis: {
 	            title: {
-	                text: 'Score (µÃ·Ö)'
+	                text: 'Score (å¾—åˆ†)'
 	            },
 	            plotLines: [{
 	                value: 0,
@@ -37,7 +38,7 @@
 	            }]
 	        },
 	        tooltip: {
-	            valueSuffix: '·Ö'
+	            valueSuffix: 'åˆ†'
 	        },
 	        legend: {
 	            layout: 'vertical',
@@ -52,7 +53,7 @@
 	            name: 'HAMA',
 	            data: [5, 5.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6,11.5]
 	        }, {
-	            name: 'µÚÒ»·ÖÁ¿±í',
+	            name: 'ç¬¬ä¸€åˆ†é‡è¡¨',
 	            data: [5, 5.6, 7.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9,9.0]
 	        }]
 	    });
